force-app/main/default/objects/Instructor__c/Instructor__c.object-meta.xml
<CustomObject>
    <description>Object to track all instructors and their related courses/sessions</description>
    <label>Instructor</label>
    <nameField>
        <displayFormat>IN-{0000}</displayFormat>
        <label>Instructor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Instructors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>