force-app/main/default/objects/Instructor__c/fields/CourseSession__c.field-meta.xml
<CustomField>
    <fullName>CourseSession__c</fullName>
    <label>Course</label>
    <referenceTo>Course_Session__c</referenceTo>
    <relationshipLabel>Instructors</relationshipLabel>
    <relationshipName>Instructors</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>