force-app/main/default/objects/Instructor__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <label>Instructor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Courses Instructed</relationshipLabel>
    <relationshipName>Instructors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>