force-app/main/default/objects/Instructor__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>Text field for additional notes</description>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>